Fixed map control and map appearance
This is both on mobile and desktop.  We rely on Google Maps JavaScript
API to select the best experience.  We explicitly disable only street
view control and map type control which doen't make sense in our
experience.

Scaling on mobile was changed to 1.0 which gives better result than
device width.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ License along with SOS Pomoc application.  If not, see
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>SOS Pomoc (Powered by Hearth)</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <link href='http://fonts.googleapis.com/css?family=Signika:300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/app.css">
     <script src="scripts/vendor/custom.modernizr.js"></script>
