--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ License along with SOS Pomoc application.  If not, see
 <!doctype html>
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="cs" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="cs" > <!--<![endif]-->
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>SOS Pomoc (Powered by Hearth)</title>
@@ -28,115 +28,142 @@ License along with SOS Pomoc application.  If not, see
     <link href='http://fonts.googleapis.com/css?family=Signika:300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/app.css">
     <script src="scripts/vendor/custom.modernizr.js"></script>
-</head>
-<body ng-app="sosPomocApp">
-<form ng-controller="FilterCtrl" id="filter" class="custom">
-    <div ng-repeat="category in categories">
+  </head>
+  <body ng-app="sosPomocApp">
+    <form ng-controller="FilterCtrl" id="filter" class="custom">
+      <div ng-repeat="category in categories">
         <label ng-click="toggle(category, $event)"
                ng-class="{ tag: true, checked: category.checked }"
-               class="tag"
-               for="tag-{{ category.value }}">
-            <input type="checkbox"
-                   ng-checked="category.checked"
-                   id="tag-{{ category.value }}"
-                   style="display: none;">
-            <span ng-class="{ custom: true, checkbox: true, checked: category.checked }"></span> {{ category.name }}
+               for="filter-tag-{{ category.value }}">
+          <input type="checkbox"
+                 ng-checked="category.checked"
+                 id="filter-tag-{{ category.value }}"
+                 style="display: none;">
+          <span ng-class="{ custom: true, checkbox: true, checked: category.checked }"></span>
+          {{ category.name }}
         </label>
+      </div>
+    </form>
+    <div id="powered-by">
+      <a href="http://www.hearth.net/">Powered by Hearth</a>
     </div>
-</form>
-<div id="powered-by">
-  <a href="http://www.hearth.net/">Powered by Hearth</a>
-</div>
-<div ng-controller="MapCtrl"
-     ng-init="initMap()"
-     id="map"></div>
-<div ng-controller="AdCreationCtrl" id="creation">
+    <div ng-controller="MapCtrl" ng-init="initMap()" id="map"></div>
+    <div ng-controller="AdCreationCtrl" id="creation">
       <a ng-click="showForm = !showForm;"
-       class="toggle-form">{{ toggleTitle }}</a>
+         class="toggle-form">{{ toggleTitle }}</a>
       <form ng-show="showForm" class="custom" name="createForm">
         <fieldset>
-            <legend>Potřebuji pomoc</legend>
-          <div class="row" style="color: green" ng-show="formSent">
-              <div>Odesláno!</div>
+          <legend>Potřebuji pomoc</legend>
+          <div ng-show="formSent" class="row" style="color: green">
+            <div>Odesláno!</div>
           </div>
-          <div class="row" style="color: red" ng-show="errors.length > 0">
-              <div><ul><li ng-repeat="error in errors">{{ error.msg }}</li></ul></div>
+          <div ng-show="errors.length > 0" class="row" style="color: red">
+            <div>
+              <ul>
+                <li ng-repeat="error in errors">{{ error.msg }}</li>
+              </ul>
+            </div>
           </div>
-            <div class="row">
-                <div class="large-6 columns">
-              <input type="text" ng-model="newItem.name" required placeholder="Jméno a příjmení">
-                </div>
-                <div class="large-6 columns">
-              <input type="email" ng-model="newItem.email" required placeholder="Email">
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                <p ng-show="newItem.location.lat && newItem.location.lon" ng-cloak>Místo: <span ng-cloak ng-show="!newItem.location.name">Vaše aktuální poloha.</span><span ng-cloak ng-show="newItem.location.name">{{ newItem.location.name }}</span> <button type="button" class="small button" ng-click="newItem.location = null">Změnit</button></p>
-                <input type="text" id="newLocation" ng-model="newItem.location" placeholder="Místo (napište prvních pár písmen)" ng-show="!newItem.location.lat || !newItem.location.lon" ng-cloak>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-              <textarea ng-model="newItem.description" placeholder="Popis" required></textarea>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <ul class="categories">
-                        <li ng-repeat="category in newItem.categories" ng-click="toggleCategory($index)" ng-show="!category.checked">
-                            <label class="tag">
-                                <span class="custom checkbox"></span> {{ category.name }}
-                            </label>
-                        </li>
-                    </ul>
-                </div>
-            </div>
           <div class="row">
-              <button ng-click="submit()">Odeslat</button>
+            <div class="large-6 columns">
+              <input type="text"
+                     ng-model="newItem.name"
+                     required
+                     placeholder="Jméno a příjmení">
+            </div>
+            <div class="large-6 columns">
+              <input type="email"
+                     ng-model="newItem.email"
+                     required
+                     placeholder="Email">
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <p ng-cloak
+                 ng-show="newItem.location.lat && newItem.location.lon">Místo:
+                <span ng-cloak
+                      ng-show="!newItem.location.name">Vaše aktuální poloha.</span>
+                <span ng-cloak
+                      ng-show="newItem.location.name">{{ newItem.location.name }}</span>
+                <button type="button"
+                        ng-click="newItem.location = null"
+                        class="small button">Změnit</button>
+              </p>
+              <input type="text"
+                     ng-cloak
+                     ng-model="newItem.location"
+                     ng-show="!newItem.location.lat || !newItem.location.lon"
+                     id="newLocation"
+                     placeholder="Místo (napište prvních pár písmen)">
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <textarea ng-model="newItem.description"
+                        placeholder="Popis"
+                        required></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <ul class="categories">
+                <li ng-repeat="category in newItem.categories"
+                    ng-click="toggleCategory($index)"
+                    ng-show="!category.checked">
+                  <label class="tag">
+                    <span class="custom checkbox"></span> {{ category.name }}
+                  </label>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <button ng-click="submit()">Odeslat</button>
           </div>
         </fieldset>
-    </form>
-</div>
+      </form>
+    </div>
 
-<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyADfTvyBFxLzyBocNkfh1g4RMGoPYzpowM&sensor=false&libraries=places"></script>
-<script src="scripts/vendor/infobox.js"></script>
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyADfTvyBFxLzyBocNkfh1g4RMGoPYzpowM&sensor=false&libraries=places"></script>
+    <script src="scripts/vendor/infobox.js"></script>
 
-<script src="components/angular/angular.js"></script>
-<script src="components/angular-resource/angular-resource.js"></script>
-<script src="components/angular-cookies/angular-cookies.js"></script>
-<script src="components/angular-sanitize/angular-sanitize.js"></script>
-<script>
-    document.write('__proto__' in {} ?
-            '<script src="scripts/vendor/zepto.js"><\/script>' :
-            '<script src="scripts/vendor/jquery.js"><\/script>'
-    );
-</script>
-<!-- build:js scripts/foundation.js -->
-<script src="scripts/foundation/foundation.js"></script>
-<script src="scripts/foundation/foundation.alerts.js"></script>
-<script src="scripts/foundation/foundation.clearing.js"></script>
-<script src="scripts/foundation/foundation.cookie.js"></script>
-<script src="scripts/foundation/foundation.dropdown.js"></script>
-<script src="scripts/foundation/foundation.forms.js"></script>
-<script src="scripts/foundation/foundation.interchange.js"></script>
-<script src="scripts/foundation/foundation.joyride.js"></script>
-<script src="scripts/foundation/foundation.magellan.js"></script>
-<script src="scripts/foundation/foundation.orbit.js"></script>
-<script src="scripts/foundation/foundation.placeholder.js"></script>
-<script src="scripts/foundation/foundation.reveal.js"></script>
-<script src="scripts/foundation/foundation.section.js"></script>
-<script src="scripts/foundation/foundation.tooltips.js"></script>
-<script src="scripts/foundation/foundation.topbar.js"></script>
-<!-- endbuild -->
+    <script src="components/angular/angular.js"></script>
+    <script src="components/angular-resource/angular-resource.js"></script>
+    <script src="components/angular-cookies/angular-cookies.js"></script>
+    <script src="components/angular-sanitize/angular-sanitize.js"></script>
 
-<!-- build:js scripts/app.js -->
-<script src="scripts/app.js"></script>
-<script src="scripts/services/ads_service.js"></script>
-<script src="scripts/controllers/main.js"></script>
-<script src="scripts/controllers/map.js"></script>
-<script src="scripts/controllers/filter.js"></script>
-<script src="scripts/controllers/ad_creation.js"></script>
-<!-- endbuild -->
-</body>
+    <script>
+      document.write('__proto__' in {} ?
+        '<script src="scripts/vendor/zepto.js"><\/script>' :
+        '<script src="scripts/vendor/jquery.js"><\/script>'
+      );
+    </script>
+    <!-- build:js scripts/foundation.js -->
+    <script src="scripts/foundation/foundation.js"></script>
+    <script src="scripts/foundation/foundation.alerts.js"></script>
+    <script src="scripts/foundation/foundation.clearing.js"></script>
+    <script src="scripts/foundation/foundation.cookie.js"></script>
+    <script src="scripts/foundation/foundation.dropdown.js"></script>
+    <script src="scripts/foundation/foundation.forms.js"></script>
+    <script src="scripts/foundation/foundation.interchange.js"></script>
+    <script src="scripts/foundation/foundation.joyride.js"></script>
+    <script src="scripts/foundation/foundation.magellan.js"></script>
+    <script src="scripts/foundation/foundation.orbit.js"></script>
+    <script src="scripts/foundation/foundation.placeholder.js"></script>
+    <script src="scripts/foundation/foundation.reveal.js"></script>
+    <script src="scripts/foundation/foundation.section.js"></script>
+    <script src="scripts/foundation/foundation.tooltips.js"></script>
+    <script src="scripts/foundation/foundation.topbar.js"></script>
+    <!-- endbuild -->
+
+    <!-- build:js scripts/app.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/services/ads_service.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/map.js"></script>
+    <script src="scripts/controllers/filter.js"></script>
+    <script src="scripts/controllers/ad_creation.js"></script>
+    <!-- endbuild -->
+  </body>
 </html>
