Form moved to the partials

--- a/public/index.html
+++ b/public/index.html
@@ -51,78 +51,10 @@ License along with SOS Pomoc application.  If not, see
     <div ng-controller="MapCtrl" ng-init="initMap()" id="map"></div>
     <div ng-controller="AdFormCtrl" ng-cloak id="create-form">
       <div class="toggle-form">
-        <a ng-click="open()"><span></span> Potřebuji…</a>
+        <a ng-click="open()" href="#/needs/new"><span></span> Potřebuji…</a>
       </div>
 
-      <form ng-show="showForm" name="create-form" class="custom">
-        <fieldset>
-          <legend>Potřebuji pomoc</legend>
-          <div ng-show="formSent" class="row" style="color: green">
-            <div>Odesláno!</div>
-          </div>
-          <div ng-show="errors.length > 0" class="row" style="color: red">
-            <div>
-              <ul>
-                <li ng-repeat="error in errors">{{ error.msg }}</li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-6 columns">
-              <input type="text"
-                     ng-model="newItem.name"
-                     required
-                     placeholder="Jméno a příjmení">
-            </div>
-            <div class="large-6 columns">
-              <input type="email"
-                     ng-model="newItem.email"
-                     required
-                     placeholder="Email">
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <p ng-show="newItem.location.lat && newItem.location.lon">Místo:
-                <span ng-show="!newItem.location.name">Vaše aktuální poloha.</span>
-                <span ng-show="newItem.location.name">{{ newItem.location.name }}</span>
-                <button type="button"
-                        ng-click="newItem.location = null"
-                        class="small button">Změnit</button>
-              </p>
-              <input type="text"
-                     ng-model="newItem.location"
-                     ng-show="!newItem.location.lat || !newItem.location.lon"
-                     id="newLocation"
-                     placeholder="Místo (napište prvních pár písmen)">
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <textarea ng-model="newItem.description"
-                        placeholder="Popis"
-                        required></textarea>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <ul class="categories">
-                <li ng-repeat="category in newItem.categories"
-                    ng-click="toggleCategory($index)"
-                    ng-show="!category.checked">
-                  <label class="tag">
-                    <span class="custom checkbox"></span> {{ category.name }}
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <button ng-click="submit()">Odeslat</button>
-          </div>
-          <a ng-click="close()" href="#" class="close">&times;</a>
-        </fieldset>
-      </form>
+      <ng-view></ng-view>
     </div>
 
     <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyADfTvyBFxLzyBocNkfh1g4RMGoPYzpowM&sensor=false&libraries=places"></script>
