Our map app uses sensor
So, the change is reflected in Google Maps API include.

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@ License along with SOS Pomoc application.  If not, see
       <ng-view></ng-view>
     </div>
 
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyADfTvyBFxLzyBocNkfh1g4RMGoPYzpowM&sensor=false&libraries=places"></script>
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyADfTvyBFxLzyBocNkfh1g4RMGoPYzpowM&sensor=true&libraries=places"></script>
     <script src="scripts/vendor/infobox.js"></script>
 
     <script src="components/angular/angular.js"></script>
