Form routes fixed
The AdFormCtrl is broken though as some things regarding Google Maps
API don't work properly.

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@ License along with SOS Pomoc application.  If not, see
     <div ng-controller="MapCtrl" ng-init="initMap()" id="map"></div>
     <div ng-controller="AdFormCtrl" ng-cloak id="create-form">
       <div class="toggle-form">
-        <a ng-click="open()" href="#/needs/new"><span></span> Potřebuji…</a>
+        <a href="#/needs/new"><span></span> Potřebuji…</a>
       </div>
 
       <ng-view></ng-view>
