--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ License along with SOS Pomoc application.  If not, see
       </div>
     </form>
     <div ng-controller="MapCtrl" ng-init="initMap()" id="map"></div>
-    <div ng-controller="AdFormCtrl" ng-cloak id="create-form">
+    <div ng-cloak id="create-form">
       <div class="toggle-form">
         <a href="#/needs/new"><span></span> Potřebuji…</a>
       </div>
