--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@ License along with SOS Pomoc application.  If not, see
     <header>
       <h1><a href="http://www.sospomoc.cz/">SOSPomoc.cz</a></h1>
       <h2 class="subheader"><a href="http://www.hearth.net/" lang="en">powered by Hearth</a></h2>
-      <p>je mapa lidí zasáhnutých povodní a pro jim pomáhající.</p>
+      <p> - pomozte konkrétním lidem postiženým povodněmi.</p>
     </header>
     <section id="controls">
       <form ng-controller="FilterCtrl" ng-cloak id="filter" class="custom">
