--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@ License along with SOS Pomoc application.  If not, see
     <title>SOS Pomoc (Powered by Hearth)</title>
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link href='http://fonts.googleapis.com/css?family=Signika:300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Signika:300,400&subset=latin,latin-ext">
     <link rel="stylesheet" href="styles/app.css">
     <script src="scripts/vendor/custom.modernizr.js"></script>
   </head>
