Claim title changed
No TLD there.

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@ License along with SOS Pomoc application.  If not, see
   </head>
   <body ng-app="sosPomocApp">
     <header>
-      <h1><a href="http://www.sospomoc.cz/">SOSPomoc.cz</a></h1>
+      <h1><a href="http://www.sospomoc.cz/">SOS Pomoc</a></h1>
       <h2 class="subheader"><a href="http://www.hearth.net/" lang="en">powered by Hearth</a></h2>
       <p> - pomozte konkrétním lidem postiženým povodněmi.</p>
     </header>
